src/objects/Address_Information__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address formula to create single string from elements.</description>
        <formula>Building_No__c &amp;&apos; &apos;&amp;Street__c&amp;if(not(isblank(Apt_No__c)),&quot; - Apt &quot;&amp;Apt_No__c,&apos; &apos;)&amp;BR()&amp;
text(City__c)&amp;&apos;, &apos;&amp;text(State__c)&amp;&apos; &apos;&amp;Zip__c&amp;BR()&amp;
text(Neighborhood__c)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apt_No__c</fullName>
        <label>Apt. No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_No__c</fullName>
        <label>Building No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Head of Household Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City_Formula__c</fullName>
        <formula>if(isblank(Zip_Code__c),text(City__c), Text(Zip_Code__r.City__c))</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City Text</label>
        <picklist>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chestnut Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deer Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mount Vernon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Bergen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yonkers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Information</relationshipLabel>
        <relationshipName>Secondary_Address</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Community_District__c</fullName>
        <inlineHelpText>Use the City Block Info Lookup link (bottom of page) to find this information</inlineHelpText>
        <label>Community District</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Head of Household</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <label>Head of Household Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Currently_living_in_NYC__c</fullName>
        <label>Currently living in NYC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Verified__c</fullName>
        <label>Date Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Head of Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_Verified__c</fullName>
        <label>How Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents/Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone call made</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intake_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intake Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivateHouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lives_with__c</fullName>
        <label>Lives with</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <picklist>
            <picklistValues>
                <fullName>Astoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auburndale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathgate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Park City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford Stuyvesant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belmont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bensonhurst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boro Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezy Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briarwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronxdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canarsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Harlem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chelsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coney Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <description>based on move-in date</description>
        <formula>(TODAY() - Move_In_Date__c) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years at Address</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relation_to_Client_Other__c</fullName>
        <label>Relation to Client (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_to_client__c</fullName>
        <label>Relation to Client</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romantic Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Formula__c</fullName>
        <formula>if(isblank(Zip_Code__c),text(State__c), Text(Zip_Code__r.State__c))</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State Text</label>
        <picklist>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Housing__c</fullName>
        <label>Type of Housing</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent supportive housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private/Market housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional residence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_at_Address__c</fullName>
        <label>Years at Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zip Code</label>
        <referenceTo>Zip_Code_Mapping__c</referenceTo>
        <relationshipLabel>Address Information</relationshipLabel>
        <relationshipName>Address_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Address Information</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Add-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Person</fullName>
        <active>true</active>
        <description>Contact Person is Required if Address Type is Primary</description>
        <errorConditionFormula>AND (ISPICKVAL( Address_Type__c, &quot;Primary&quot;), isblank(Contact_Person__c), 
Client__r.Account.Name = &quot;CEP&quot;)</errorConditionFormula>
        <errorDisplayField>Contact_Person__c</errorDisplayField>
        <errorMessage>Head of Household must be filled in if Address Type is Primary</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Verified</fullName>
        <active>false</active>
        <description>How Verified Value is required if Date Verified is filled</description>
        <errorConditionFormula>AND( NOT( ISNULL(  Date_Verified__c )), 
OR(
ISPICKVAL(  How_Verified__c , &quot;Not Entered&quot;), ISPICKVAL(  How_Verified__c , &quot;&quot;)
))</errorConditionFormula>
        <errorDisplayField>How_Verified__c</errorDisplayField>
        <errorMessage>How Verified cannot be &quot;Not Entered &quot; or blank if Date Verified is entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_can_not_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Move_In_Date__c &gt;  TODAY() )</errorConditionFormula>
        <errorDisplayField>Move_In_Date__c</errorDisplayField>
        <errorMessage>Move In Date can not be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_Verified</fullName>
        <active>false</active>
        <description>Date Verified is required to be filled if How Verified is with a value other than &quot;Not Entered&quot; or blank</description>
        <errorConditionFormula>AND(ISNULL(  Date_Verified__c ), 
AND(
NOT(ISPICKVAL(  How_Verified__c , &quot;Not Entered&quot;)), 
NOT(ISPICKVAL(  How_Verified__c , &quot;&quot;))
))</errorConditionFormula>
        <errorDisplayField>Date_Verified__c</errorDisplayField>
        <errorMessage>Date Verified cannot be left blank if How Verified is a value other the Not Entered or blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Move_Out_Date_before_Move_In_Date</fullName>
        <active>true</active>
        <description>Cannot have a move out date before a move in date</description>
        <errorConditionFormula>AND( Move_In_Date__c  &gt; Move_Out_Date__c )</errorConditionFormula>
        <errorDisplayField>Move_Out_Date__c</errorDisplayField>
        <errorMessage>Cannot have a move out date before a move in date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_relation_to_Client</fullName>
        <active>false</active>
        <description>If Relation to Client is OTHER, then the Other text box has to be entered.</description>
        <errorConditionFormula>AND( ISPICKVAL( Relation_to_client__c ,&quot;Other&quot;) , ( Relation_to_Client_Other__c  = &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Relation_to_Client_Other__c</errorDisplayField>
        <errorMessage>If Relation to Client is OTHER, then Other text has to be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Address_Move_In_Date</fullName>
        <active>true</active>
        <description>An Address type PRIMARY must have a move in date</description>
        <errorConditionFormula>AND(ISPICKVAL( Address_Type__c , &quot;Primary&quot;),  ISNULL(Move_In_Date__c),
Client__r.Account.Name = &quot;CEP&quot;)</errorConditionFormula>
        <errorDisplayField>Move_In_Date__c</errorDisplayField>
        <errorMessage>If Address Type is PRIMARY, a move in date has to be entered.</errorMessage>
    </validationRules>
</CustomObject>